# ardupilot_gazebo

./: CMakeLists.txt
include/: ArduPilotPlugin_Rover.hh
media/: beijing.material
models/Qaii_mode/Qaii_demo/: model.sdf
models/Qaii_mode/Qaii_vehicle/: model.sdf
models/beijing/: model.config  model.sdf
models/formation/vehicle1/: model.sdf
models/formation/vehicle1/iris/: model.sdf
models/formation/vehicle1/iris_1/: model.config  model.sdf
models/formation/vehicle2/: model.sdf
models/formation/vehicle2/iris/: model.sdf
models/formation/vehicle2/iris_2/: model.config  model.sdf
models/formation/vehicle3/: model.sdf
models/formation/vehicle3/iris/: model.sdf
models/formation/vehicle3/iris_3/: model.config  model.sdf
models/formation/vehicle4/: model.sdf
models/formation/vehicle4/iris/: model.sdf
models/formation/vehicle4/iris_4/: model.config  model.sdf
models/formation/vehicle5/: model.sdf
models/formation/vehicle5/iris/: model.sdf
models/formation/vehicle5/iris_5/: model.config  model.sdf
models/formation/vehicle6/: model.sdf
models/formation/vehicle6/iris/: model.sdf
models/formation/vehicle6/iris_6/: model.config  model.sdf
models/formation/vehicle7/: model.sdf
models/formation/vehicle7/iris/: model.sdf
models/formation/vehicle7/iris_7/: model.config  model.sdf
models/formation/vehicle8/: model.sdf
models/formation/vehicle8/iris/: model.sdf
models/formation/vehicle8/iris_8/: model.config  model.sdf
models/formation/vehicle9/: model.config  model.sdf
models/formation/vehicle9/iris/: model.sdf
models/formation/vehicle9/iris_9/: model.config  model.sdf
models/iris_with_standoffs/: model.sdf
models/jeep/: model.sdf
models/jeep/mesh/frame/: frame.dae
models/luo-xuan/: model.sdf  tt.dae
models/maze/: model.sdf  tt.dae
models/rover/: model.sdf
models/zuhe/: model.sdf  tt.dae
src/: ArduPilotPlugin.cc  ArduPilotPlugin_Rover.cc
src/world_camera_plugin/: system_gui.cc
worlds/: Qaii_demo.world  formation_demo-my.world  iris_arducopter_demo2.world  my-maze.world  rover.world  test-manuall.world
(+4 files in other folders)
